// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`batch options > reproduces the old decode_requests pool aggregate and average chart 1`] = `
{
  "grid": {
    "bottom": 30,
    "left": 62,
    "right": 18,
    "top": 34,
  },
  "legend": {
    "data": [
      "pool aggregate",
      "pool average",
    ],
    "itemHeight": 8,
    "itemWidth": 14,
    "right": 0,
    "textStyle": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "top": 0,
  },
  "series": [
    {
      "data": [
        [
          0,
          2,
        ],
        [
          1,
          3,
        ],
      ],
      "lineStyle": {
        "color": "#8db9e2",
        "opacity": 1,
        "width": 2.8,
      },
      "name": "pool aggregate",
      "step": "end",
      "symbol": "none",
      "type": "line",
      "z": 4,
    },
    {
      "data": [
        [
          0,
          1,
        ],
        [
          1,
          1.5,
        ],
      ],
      "lineStyle": {
        "color": "#e2c08d",
        "opacity": 0.95,
        "type": "dashed",
        "width": 2,
      },
      "name": "pool average",
      "step": "end",
      "symbol": "none",
      "type": "line",
      "z": 3,
    },
    {
      "animation": false,
      "data": [],
      "markLine": {
        "data": [
          {
            "xAxis": 0.5,
          },
        ],
        "label": {
          "color": "#f88070",
          "fontSize": 10.125,
          "formatter": "iter",
          "position": "start",
        },
        "lineStyle": {
          "color": "#f88070",
          "opacity": 0.85,
          "width": 1.5,
        },
        "silent": true,
        "symbol": [
          "none",
          "none",
        ],
      },
      "showSymbol": false,
      "silent": true,
      "type": "line",
    },
  ],
  "textStyle": {
    "color": "#cccccc",
    "fontFamily": "'Geist', Arial, sans-serif",
  },
  "tooltip": {
    "backgroundColor": "#333333",
    "borderWidth": 0,
    "renderMode": "richText",
    "textStyle": {
      "color": "#cccccc",
      "fontFamily": "'Geist', Arial, sans-serif",
      "fontSize": 13.5,
    },
    "trigger": "axis",
    "valueFormatter": [Function],
  },
  "xAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "lineStyle": {
        "color": "#3c3c3c",
      },
    },
    "name": "s",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "show": false,
    },
    "type": "value",
  },
  "yAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "show": false,
    },
    "axisTick": {
      "show": false,
    },
    "min": 0,
    "name": "requests",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "lineStyle": {
        "color": "rgba(160,160,160,0.12)",
        "type": "dashed",
      },
    },
    "type": "value",
  },
}
`;

exports[`batch options > reproduces the old decode_requests single-scope chart 1`] = `
{
  "grid": {
    "bottom": 30,
    "left": 46,
    "right": 16,
    "top": 30,
  },
  "legend": {
    "itemHeight": 8,
    "itemWidth": 14,
    "right": 0,
    "textStyle": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "top": 0,
  },
  "series": [
    {
      "areaStyle": {
        "color": "#8db9e2",
        "opacity": 0.12,
      },
      "data": [
        [
          0,
          2,
        ],
        [
          1,
          3,
        ],
      ],
      "lineStyle": {
        "color": "#8db9e2",
        "opacity": 1,
        "width": 2.6,
      },
      "name": "decode requests",
      "smooth": true,
      "symbol": "none",
      "type": "line",
      "z": 3,
    },
    {
      "animation": false,
      "data": [],
      "markLine": {
        "data": [
          {
            "xAxis": 0.5,
          },
        ],
        "label": {
          "color": "#f88070",
          "fontSize": 10.125,
          "formatter": "iter",
          "position": "start",
        },
        "lineStyle": {
          "color": "#f88070",
          "opacity": 0.85,
          "width": 1.5,
        },
        "silent": true,
        "symbol": [
          "none",
          "none",
        ],
      },
      "showSymbol": false,
      "silent": true,
      "type": "line",
    },
  ],
  "textStyle": {
    "color": "#cccccc",
    "fontFamily": "'Geist', Arial, sans-serif",
  },
  "tooltip": {
    "backgroundColor": "#333333",
    "borderWidth": 0,
    "renderMode": "richText",
    "textStyle": {
      "color": "#cccccc",
      "fontFamily": "'Geist', Arial, sans-serif",
      "fontSize": 13.5,
    },
    "trigger": "axis",
    "valueFormatter": [Function],
  },
  "xAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "lineStyle": {
        "color": "#3c3c3c",
      },
    },
    "name": "s",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "show": false,
    },
    "type": "value",
  },
  "yAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "show": false,
    },
    "axisTick": {
      "show": false,
    },
    "min": 0,
    "name": "requests / invocation",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "lineStyle": {
        "color": "rgba(160,160,160,0.12)",
        "type": "dashed",
      },
    },
    "type": "value",
  },
}
`;

exports[`batch options > reproduces the old prefill_tokens pool aggregate and average chart 1`] = `
{
  "grid": {
    "bottom": 30,
    "left": 62,
    "right": 18,
    "top": 34,
  },
  "legend": {
    "data": [
      "pool aggregate",
      "pool average",
    ],
    "itemHeight": 8,
    "itemWidth": 14,
    "right": 0,
    "textStyle": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "top": 0,
  },
  "series": [
    {
      "data": [
        [
          0,
          4,
        ],
        [
          1,
          6,
        ],
      ],
      "lineStyle": {
        "color": "#8db9e2",
        "opacity": 1,
        "width": 2.8,
      },
      "name": "pool aggregate",
      "step": "end",
      "symbol": "none",
      "type": "line",
      "z": 4,
    },
    {
      "data": [
        [
          0,
          2,
        ],
        [
          1,
          3,
        ],
      ],
      "lineStyle": {
        "color": "#e2c08d",
        "opacity": 0.95,
        "type": "dashed",
        "width": 2,
      },
      "name": "pool average",
      "step": "end",
      "symbol": "none",
      "type": "line",
      "z": 3,
    },
    {
      "animation": false,
      "data": [],
      "markLine": {
        "data": [
          {
            "xAxis": 0.5,
          },
        ],
        "label": {
          "color": "#f88070",
          "fontSize": 10.125,
          "formatter": "iter",
          "position": "start",
        },
        "lineStyle": {
          "color": "#f88070",
          "opacity": 0.85,
          "width": 1.5,
        },
        "silent": true,
        "symbol": [
          "none",
          "none",
        ],
      },
      "showSymbol": false,
      "silent": true,
      "type": "line",
    },
  ],
  "textStyle": {
    "color": "#cccccc",
    "fontFamily": "'Geist', Arial, sans-serif",
  },
  "tooltip": {
    "backgroundColor": "#333333",
    "borderWidth": 0,
    "renderMode": "richText",
    "textStyle": {
      "color": "#cccccc",
      "fontFamily": "'Geist', Arial, sans-serif",
      "fontSize": 13.5,
    },
    "trigger": "axis",
    "valueFormatter": [Function],
  },
  "xAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "lineStyle": {
        "color": "#3c3c3c",
      },
    },
    "name": "s",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "show": false,
    },
    "type": "value",
  },
  "yAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "show": false,
    },
    "axisTick": {
      "show": false,
    },
    "min": 0,
    "name": "tokens",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "lineStyle": {
        "color": "rgba(160,160,160,0.12)",
        "type": "dashed",
      },
    },
    "type": "value",
  },
}
`;

exports[`batch options > reproduces the old prefill_tokens single-scope chart 1`] = `
{
  "grid": {
    "bottom": 30,
    "left": 46,
    "right": 16,
    "top": 30,
  },
  "legend": {
    "itemHeight": 8,
    "itemWidth": 14,
    "right": 0,
    "textStyle": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "top": 0,
  },
  "series": [
    {
      "areaStyle": {
        "color": "#8db9e2",
        "opacity": 0.12,
      },
      "data": [
        [
          0,
          4,
        ],
        [
          1,
          6,
        ],
      ],
      "lineStyle": {
        "color": "#8db9e2",
        "opacity": 1,
        "width": 2.6,
      },
      "name": "prefill tokens",
      "smooth": true,
      "symbol": "none",
      "type": "line",
      "z": 3,
    },
    {
      "animation": false,
      "data": [],
      "markLine": {
        "data": [
          {
            "xAxis": 0.5,
          },
        ],
        "label": {
          "color": "#f88070",
          "fontSize": 10.125,
          "formatter": "iter",
          "position": "start",
        },
        "lineStyle": {
          "color": "#f88070",
          "opacity": 0.85,
          "width": 1.5,
        },
        "silent": true,
        "symbol": [
          "none",
          "none",
        ],
      },
      "showSymbol": false,
      "silent": true,
      "type": "line",
    },
  ],
  "textStyle": {
    "color": "#cccccc",
    "fontFamily": "'Geist', Arial, sans-serif",
  },
  "tooltip": {
    "backgroundColor": "#333333",
    "borderWidth": 0,
    "renderMode": "richText",
    "textStyle": {
      "color": "#cccccc",
      "fontFamily": "'Geist', Arial, sans-serif",
      "fontSize": 13.5,
    },
    "trigger": "axis",
    "valueFormatter": [Function],
  },
  "xAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "lineStyle": {
        "color": "#3c3c3c",
      },
    },
    "name": "s",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "show": false,
    },
    "type": "value",
  },
  "yAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "show": false,
    },
    "axisTick": {
      "show": false,
    },
    "min": 0,
    "name": "tokens / invocation",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "lineStyle": {
        "color": "rgba(160,160,160,0.12)",
        "type": "dashed",
      },
    },
    "type": "value",
  },
}
`;

exports[`batch options > reproduces the old total_tokens pool aggregate and average chart 1`] = `
{
  "grid": {
    "bottom": 30,
    "left": 62,
    "right": 18,
    "top": 34,
  },
  "legend": {
    "data": [
      "pool aggregate",
      "pool average",
    ],
    "itemHeight": 8,
    "itemWidth": 14,
    "right": 0,
    "textStyle": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "top": 0,
  },
  "series": [
    {
      "data": [
        [
          0,
          8,
        ],
        [
          1,
          12,
        ],
      ],
      "lineStyle": {
        "color": "#8db9e2",
        "opacity": 1,
        "width": 2.8,
      },
      "name": "pool aggregate",
      "step": "end",
      "symbol": "none",
      "type": "line",
      "z": 4,
    },
    {
      "data": [
        [
          0,
          4,
        ],
        [
          1,
          6,
        ],
      ],
      "lineStyle": {
        "color": "#e2c08d",
        "opacity": 0.95,
        "type": "dashed",
        "width": 2,
      },
      "name": "pool average",
      "step": "end",
      "symbol": "none",
      "type": "line",
      "z": 3,
    },
    {
      "animation": false,
      "data": [],
      "markLine": {
        "data": [
          {
            "xAxis": 0.5,
          },
        ],
        "label": {
          "color": "#f88070",
          "fontSize": 10.125,
          "formatter": "iter",
          "position": "start",
        },
        "lineStyle": {
          "color": "#f88070",
          "opacity": 0.85,
          "width": 1.5,
        },
        "silent": true,
        "symbol": [
          "none",
          "none",
        ],
      },
      "showSymbol": false,
      "silent": true,
      "type": "line",
    },
  ],
  "textStyle": {
    "color": "#cccccc",
    "fontFamily": "'Geist', Arial, sans-serif",
  },
  "tooltip": {
    "backgroundColor": "#333333",
    "borderWidth": 0,
    "renderMode": "richText",
    "textStyle": {
      "color": "#cccccc",
      "fontFamily": "'Geist', Arial, sans-serif",
      "fontSize": 13.5,
    },
    "trigger": "axis",
    "valueFormatter": [Function],
  },
  "xAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "lineStyle": {
        "color": "#3c3c3c",
      },
    },
    "name": "s",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "show": false,
    },
    "type": "value",
  },
  "yAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "show": false,
    },
    "axisTick": {
      "show": false,
    },
    "min": 0,
    "name": "tokens",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "lineStyle": {
        "color": "rgba(160,160,160,0.12)",
        "type": "dashed",
      },
    },
    "type": "value",
  },
}
`;

exports[`batch options > reproduces the old total_tokens single-scope chart 1`] = `
{
  "grid": {
    "bottom": 30,
    "left": 46,
    "right": 16,
    "top": 30,
  },
  "legend": {
    "itemHeight": 8,
    "itemWidth": 14,
    "right": 0,
    "textStyle": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "top": 0,
  },
  "series": [
    {
      "areaStyle": {
        "color": "#8db9e2",
        "opacity": 0.12,
      },
      "data": [
        [
          0,
          8,
        ],
        [
          1,
          12,
        ],
      ],
      "lineStyle": {
        "color": "#8db9e2",
        "opacity": 1,
        "width": 2.6,
      },
      "name": "total tokens",
      "smooth": true,
      "symbol": "none",
      "type": "line",
      "z": 3,
    },
    {
      "animation": false,
      "data": [],
      "markLine": {
        "data": [
          {
            "xAxis": 0.5,
          },
        ],
        "label": {
          "color": "#f88070",
          "fontSize": 10.125,
          "formatter": "iter",
          "position": "start",
        },
        "lineStyle": {
          "color": "#f88070",
          "opacity": 0.85,
          "width": 1.5,
        },
        "silent": true,
        "symbol": [
          "none",
          "none",
        ],
      },
      "showSymbol": false,
      "silent": true,
      "type": "line",
    },
  ],
  "textStyle": {
    "color": "#cccccc",
    "fontFamily": "'Geist', Arial, sans-serif",
  },
  "tooltip": {
    "backgroundColor": "#333333",
    "borderWidth": 0,
    "renderMode": "richText",
    "textStyle": {
      "color": "#cccccc",
      "fontFamily": "'Geist', Arial, sans-serif",
      "fontSize": 13.5,
    },
    "trigger": "axis",
    "valueFormatter": [Function],
  },
  "xAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "lineStyle": {
        "color": "#3c3c3c",
      },
    },
    "name": "s",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "show": false,
    },
    "type": "value",
  },
  "yAxis": {
    "axisLabel": {
      "color": "#a0a0a0",
      "fontSize": 12.375,
    },
    "axisLine": {
      "show": false,
    },
    "axisTick": {
      "show": false,
    },
    "min": 0,
    "name": "tokens / invocation",
    "nameTextStyle": {
      "color": "#a0a0a0",
      "fontSize": 11.25,
    },
    "splitLine": {
      "lineStyle": {
        "color": "rgba(160,160,160,0.12)",
        "type": "dashed",
      },
    },
    "type": "value",
  },
}
`;
